--- a/ui/.storybook/preview-head.html
+++ b/ui/.storybook/preview-head.html
@@ -7,3 +7,7 @@
   href="https://fonts.googleapis.com/css2?family=Amaranth:wght@700&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Changa+One&display=swap"
+  rel="stylesheet"
+/>
